# and-hole

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/debug/: AndroidManifest.xml
app/src/debug/res/values/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: colors.xml  strings.xml  (+1 more)
core/designsystem/: build.gradle.kts
core/dns/: build.gradle.kts
core/filter/: build.gradle.kts
core/tor/: build.gradle.kts
core/tor/arti-bridge/: Cargo.toml
core/tor/arti-bridge/src/: lib.rs
core/upstream/: build.gradle.kts
data/: build.gradle.kts
data/schemas/org.pihole.android.data.db.AppDatabase/: 1.json  2.json  3.json  4.json  5.json
data/src/main/assets/: default_adlists.json
docs/: DNS-TRIAGE.md  OEM-FGS-RELIABILITY.md  PRODUCT-SCOPE-SECTION5.md
docs/adr/: 2026-04-16-embedded-tor-runtime.md
docs/plans/: 2026-04-15-control-center-onboarding-observability-hardening.md  2026-04-16-embedded-tor-stream-dialer-migration.md  2026-04-17-flexible-upstream-management-plan.md
feature/diagnostics/: build.gradle.kts
feature/home/: build.gradle.kts
feature/lists/: build.gradle.kts
feature/logs/: build.gradle.kts
feature/rules/: build.gradle.kts
feature/settings/: build.gradle.kts
gradle/: libs.versions.toml
logs/: adlist_59.json  adlist_89.b64  logs_20260414_015929.txt  pihole_app_logcat_20260414_080318.txt  pihole_manifest.b64  pihole_manifest.json
scripts/: blocklist_probe_suite.py  dns_probe_lib.py  dns_tcp_probe.py  export_gravity_adlists.py  sing_box_loopback_hint.sh  verify-harness.sh
(+200 files in other folders)
