[package]
name = "andhole_arti_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = { version = "0.21", default-features = false }
once_cell = "1.21"
anyhow = "1.0"

# Arti core client (use rustls to avoid OpenSSL-on-Android).
# `onion-service-client` is required for `.onion` destinations (e.g. DoT over onion).
arti-client = { version = "0.19", default-features = false, features = ["tokio", "rustls", "compression", "static", "onion-service-client"] }
tor-rtcompat = { version = "0.19", default-features = false, features = ["tokio", "rustls", "static"] }

tokio = { version = "=1.45.1", features = ["macros", "rt-multi-thread", "sync", "time"] }
futures = "0.3"

# Optional: logcat-friendly tracing later
# tracing-subscriber = "0.3"
# tracing-android = "0.2"

